creating business logic for reserved attendance
